MVP release of new visual assault site
Add Yahoo! Pure CSS framework
Uses normalize.css

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
-    <footer role="contentinfo">
-        <p>&copy; {{ site.time | date: '%Y' }} visual assault llc, unless otherwise noted.</p>
-    </footer>
+  <footer>
+    <p>
+      &copy; {{ site.time | date: '%Y' }} visual assault, llc.<br>
+      <a href="mailto:inbound-visual-assault-org@visual-assault.org" title="Email visual assault">Email</a>
+      <a href="https://github.com/visual-assault" title="visual assault on GitHub">GitHub</a>
+      <a href="https://twitter.com/@visualassault" title="visual assault on Twitter">Twitter</a>
+    </p>
+  </footer>
 </body>
 </html>
