Implemented core css layout with Pure css

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,13 @@
-  <footer>
-    <p>
+  <footer class="c-Footer o-Layout pure-g">
+    <div class="pure-u-sm-1-4">&nbsp;</div>
+    <p class="pure-u-sm-3-4 c-Meta">
       &copy; {{ site.time | date: '%Y' }} visual assault, llc.<br>
-      <a href="mailto:inbound-visual-assault-org@visual-assault.org" title="Email visual assault">Email</a>
-      <a href="https://github.com/visual-assault" title="visual assault on GitHub">GitHub</a>
-      <a href="https://twitter.com/@visualassault" title="visual assault on Twitter">Twitter</a>
+      <a class="c-Meta" href="mailto:inbound-visual-assault-org@visual-assault.org"
+        rel="external" title="Email visual assault">Email</a>
+      <a class="c-Meta" href="https://github.com/visual-assault"
+        rel="external" title="visual assault on GitHub">GitHub</a>
+      <a class="c-Meta" href="https://twitter.com/@visualassault"
+        rel="external" title="visual assault on Twitter">Twitter</a>
     </p>
   </footer>
 </body>
