--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,12 @@
-<nav role="navigation">
-    <ul>
-    {% assign pages = site.pages | sort:"url" %}
-    {% for p in pages %}
-        {% if p.in-nav == true %}
-            <li><a {% if p.url == page.url %}class="active"{% endif %} href="{{ p.url }}">{{ p.title }}</a></li>
-        {% endif %}
-    {% endfor %}
-    </ul>
+<nav class="c-GlobalNav pure-menu pure-menu-horizontal" role="navigation">
+  <ul class="c-GlobalNav--List pure-menu-list">
+  {% assign pages = site.pages | sort:"url" %}
+  {% for p in pages %}
+  {% if p.in-nav == true %}
+    <li class="c-GlobalNav--Item pure-menu-item{% if p.url == page.url %} is-active{% endif %}">
+      <a class="c-GlobalNav--Link pure-menu-link" href="{{ p.url }}">{{ p.title }}</a>
+    </li>
+    {% endif %}
+  {% endfor %}
+  </ul>
 </nav>
