--- a/static/stylesheets/base.scss
+++ b/static/stylesheets/base.scss
@@ -36,6 +36,7 @@ input,
 select,
 .pure-g [class*="pure-u"] {
   /* Normalize font stack. */
+  /* font-family: Georgia, Times, "Times New Roman", serif; */
   font-size: 100%;
   /*
   -webkit-font-feature-settings: "liga", "kern";
