--- a/static/stylesheets/components.scss
+++ b/static/stylesheets/components.scss
@@ -47,3 +47,11 @@
 .c-Meta {
   color: rgba(61, 70, 77, 0.6);
 }
+
+/* ===== c-License =====================================================
+ * Copyright and ownership styles
+ */
+.c-License {
+  margin-top: 4em;
+  margin-bottom: 4em;
+}
