--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
   <footer class="c-Footer o-Layout pure-g">
     <div class="pure-u-sm-1-4">&nbsp;</div>
     <p class="pure-u-sm-3-4 c-Meta">
-      &copy; {{ site.time | date: '%Y' }} visual assault, llc.<br>
+      &copy; {{ site.time | date: '%Y' }} visual assault, llc (unless otherwise noted.)
+      <br>
       <a class="c-Meta" href="mailto:inbound-visual-assault-org@visual-assault.org"
         rel="external" title="Email visual assault">Email</a>
       <a class="c-Meta" href="https://github.com/visual-assault"
