Adjusted images to flex with viewport width

--- a/static/stylesheets/all.css
+++ b/static/stylesheets/all.css
@@ -1,256 +1,7 @@
-@charset "UTF-8";
 /*!
  * visual-assault.org
  *
  * author: Ron. A @0xADADA
  * MIT License
- */
-/* vendors */
-@import url(../vendor/bower_components/pure/pure-min.css);
-@import url(../vendor/bower_components/pure/grids-responsive-min.css);
-/* local */
-/* ===== Tools =========================================================
- * Tools
- * Globally-available tools. Public mixins, helper functions.
- */
-/*
- * Image replacement
- */
-.t-ir {
-  background-color: transparent;
-  border: 0;
-  overflow: hidden;
-  /* IE 6/7 fallback */
-  *text-indent: -9999px; }
-
-.t-ir:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 100%; }
-
-/*
- * Hide from both screenreaders and browsers: h5bp.com/u
- */
-.t-hidden {
-  display: none !important;
-  visibility: hidden; }
-
-/*
- * Hide only visually, but have it available for screenreaders: h5bp.com/v
- */
-.t-visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px; }
-
-/*
- * Extends the .visuallyhidden class to allow the element to be focusable
- * when navigated to via the keyboard: h5bp.com/p
- */
-.t-visuallyhidden.focusable:active,
-.t-visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto; }
-
-/*
- * Hide visually and from screenreaders, but maintain layout
- */
-.t-invisible {
-  visibility: hidden; }
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-.t-clearfix:before,
-.t-clearfix:after {
-  content: " ";
-  /* 1 */
-  display: table;
-  /* 2 */ }
-
-.t-clearfix:after {
-  clear: both; }
-
-/*
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-.t-clearfix {
-  *zoom: 1; }
-
-/* ===== Base ==========================================================
- * Base
- * Unclassified HTML elements, h1-h6, UL, OL, the deepest layer we should
- * see the type selector.
- */
-/*
- * Set the base viewport
-@-webkit-viewport { width: device-width; }
-@-moz-viewport { width: device-width; }
-@-ms-viewport { width: device-width; }
-@-o-viewport { width: device-width; }
-@viewport { width: device-width; }
- */
-/* ===== Colors from style guide =======================================
- * Pituitary PurpleHex: 40065D
- * Pons Green Light Hex: 1BB2AA Dark Hex: 11827A
-￼￼ * Cerebellum Pink Hex: 40065D
- * Dark Gray Matter Hex: 3A4046
-￼ * Light Gray Matter Hex: 40065D
- */
-/*
- * Use box-sizing
- */
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-html,
-button,
-input,
-select,
-.pure-g [class*="pure-u"] {
-  /* Normalize font stack. */
-  /* font-family: Georgia, Times, "Times New Roman", serif; */
-  font-size: 100%;
-  /*
-  -webkit-font-feature-settings: "liga", "kern";
-  -moz-font-feature-settings: "liga", "kern";
-  font-kerning: normal;
-   */
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* font-smooth: always; */
-  /* text size adjust
-   * allows Web authors to control if and how
-   * the text-inflating algorithm is applied to the textual content
-   * of the element it is applied to.
-   */
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  /* text-size-adjust: 100%; */
-  text-rendering: optimizelegibility; }
-
-body {
-  background: #FDF9F0;
-  color: #292929;
-  padding: 1.5em; }
-
-a {
-  color: #292929;
-  text-decoration: underline; }
-
-a:hover {
-  color: #0000cc; }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: Georgia, serif;
-  font-size: 1em; }
-
-@media (max-width: 568px) {
-  .pure-g {
-    letter-spacing: 0; } }
-/* ===== Objects =======================================================
- * Objects
- * OOCSS, design patterns, no cosmetic styles, begin using classes
- * exclusively with agnostic names (e.g. 'ui-list').
- * This is where the sculptor roughs in general shapes.
- *
- * o- is the prefix for all objects.
- */
-/* ===== o-Layout ======================================================
- * Designates the main site horizontal widths
- */
-.o-Layout {
-  max-width: 57em;
-  margin: 0 auto; }
-
-/* ===== o-Center ======================================================
- * Center text content
- */
-.o-Center {
-  text-align: center; }
-
-/* ===== Components ====================================================
- * Components
- * Fully designed pieces of UI, Still only utilizes class selectors. More
- * expliciltly named (e.g. products-list).
- * This is where the sculptor adds the features.
- */
-/* ===== c-Header ======================================================
- * The global site header
- * c-Header
- */
-.c-Header {
-  margin-bottom: 4.5em; }
-
-/* ===== c-GlobalNav ===================================================
- * The global navigation links
- */
-.c-GlobalNav--Link:link {
-  background-color: transparent;
-  color: #292929;
-  padding: 0;
-  text-decoration: none; }
-
-.c-GlobalNav--Link:hover,
-.c-GlobalNav--Item.is-active .c-GlobalNav--Link {
-  text-decoration: underline; }
-
-.c-GlobalNav--Link:hover {
-  background-color: transparent; }
-
-/* ===== c-Footer ======================================================
- * Global site footer
- */
-.c-Footer {
-  margin: 1.5em auto;
-  border-top: 1px solid rgba(61, 70, 77, 0.1); }
-
-/* ===== c-Meta ========================================================
- * Non-content styling
- */
-.c-Meta {
-  color: rgba(61, 70, 77, 0.6); }
-
-/* ===== c-License =====================================================
- * Copyright and ownership styles
- */
-.c-License {
-  margin-top: 4em;
-  margin-bottom: 4em; }
-
-/* ===== Trumps ========================================================
- * Trumps
- * Overrides, helpers, utilities. Only affect on piece of the DOM at
- * a time. Usually carry !imporant.
- * This is where the sculptor adds fine details.
- */
-
+ */@import url(../../vendor/bower_components/pure/pure-min.css);@import url(../../vendor/bower_components/pure/grids-responsive-min.css);.t-ir{background-color:transparent;border:0;overflow:hidden;*text-indent:-9999px}.t-ir:before{content:"";display:block;width:0;height:100%}.t-hidden{display:none !important;visibility:hidden}.t-visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.t-visuallyhidden.focusable:active,.t-visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.t-invisible{visibility:hidden}.t-clearfix:before,.t-clearfix:after{content:" ";display:table}.t-clearfix:after{clear:both}.t-clearfix{*zoom:1}*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}html,button,input,select,.pure-g [class*="pure-u"]{font-size:100%;line-height:1.5;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-webkit-text-size-adjust:100%;-moz-text-size-adjust:100%;-ms-text-size-adjust:100%;text-rendering:optimizelegibility}body{background:#FDF9F0;color:#292929;padding:1.5em}a{color:#292929;text-decoration:underline}a:hover{color:#0000cc}h1,h2,h3,h4,h5,h6{font-family:Georgia, serif;font-size:1em}img{max-width:100%}@media (max-width: 568px){.pure-g{letter-spacing:0}}.o-Layout{max-width:57em;margin:0 auto}.o-Center{text-align:center}.c-Header{margin-bottom:4.5em}.c-GlobalNav--Link:link{background-color:transparent;color:#292929;padding:0;text-decoration:none}.c-GlobalNav--Link:hover,.c-GlobalNav--Item.is-active .c-GlobalNav--Link{text-decoration:underline}.c-GlobalNav--Link:hover{background-color:transparent}.c-Footer{margin:1.5em auto;border-top:1px solid rgba(61,70,77,0.1)}.c-Meta{color:rgba(61,70,77,0.6)}.c-License{margin-top:4em;margin-bottom:4em}
 /*# sourceMappingURL=all.css.map */
