#7 Implemented developer tools

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,5 +11,8 @@
         rel="external" title="visual assault on Twitter">Twitter</a>
     </p>
   </footer>
+  {% if site.is_dev %}
+  <script src="//localhost:35729/livereload.js"></script>
+  {% endif %}
 </body>
 </html>
