--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,15 +4,14 @@
   <meta charset="utf-8">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="initial-scale=1">
-
-  {% if site.is_dev %}
-  <link rel="stylesheet" href="/static/stylesheets/all.css">
-  {% else %}
-  <link rel="stylesheet" href="/static/stylesheets/all.min.b708d6a0.css">
-  {% endif %}
-
   <link rel="canonical" href="{{ site.url }}{{ page.url }}">
   <link rel="home" href="{{ site.url }}">
+
+{% if site.is_dev %}
+  {% include stylesheet_dev.html %}
+{% else %}
+  {% include stylesheet_prod.html %}
+{% endif %}
 
   {% if page.metaDescription %}
   <meta name="description" content="{{ page.metaDescription }}">
