Updated styles to separate columns on pages

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 
 <article class="o-Layout pure-g h-entry">
-  <header class="pure-u-sm-1-4">
+  <header class="pure-u-sm-1-4 c-Header">
     <h1 class="p-name">
     {% if page.displayTitle %}
         {{ page.displayTitle }}
