--- a/static/stylesheets/components.scss
+++ b/static/stylesheets/components.scss
@@ -13,6 +13,12 @@
   margin-bottom: 4.5em;
 }
 
+@media only screen and (min-width: 35.5em) {
+  .c-Header {
+    padding-right: 1.5em;
+  }
+}
+
 
 /* ===== c-GlobalNav ===================================================
  * The global navigation links
