--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,24 +1,33 @@
 {% include header.html %}
 
-<article class="o-Layout pure-g h-entry">
+<article class="o-Layout pure-g hentry h-entry">
   <header class="pure-u-sm-1-4 c-Header">
-    <h1 class="p-name">
+    <h1 class="entry-title p-name">
     {% if page.displayTitle %}
-        {{ page.displayTitle }}
+      {{ page.displayTitle }}
     {% endif %}
     </h1>
 
     {% if page.date %}
-    <time class="dt-published" datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%A %B %-d, %Y" }}</time>
+    <time class="published updated dt-published"
+      datetime="{{ page.date | date: "%Y-%m-%d" }}"
+      pubdate>
+      {{ page.date | date: "%A %B %-d, %Y" }}
+    </time>
     {% endif %}
 
     {% if page.author %}
     <br>
-    by <span class="p-author">{{ page.author }}</span>
+    <span class="byline vcard h-card">
+      by:
+      <span class="author p-author p-name fn">
+        {{ page.author }}
+      </span>
+    </span>
     {% endif %}
   </header>
 
-  <div class="pure-u-sm-3-4 e-content">
+  <div class="pure-u-sm-3-4 entry-content e-content">
     {{ content }}
   </div>
 
