removed duplicate author

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -29,7 +29,7 @@
 
     {% if page.author %}
     <br>
-    <span class="byline author vcard h-card">
+    <span class="byline vcard h-card">
       by:
       <span class="author fn p-author p-name">
         {{ page.author }}
