target style update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,14 @@
   <link rel="stylesheet" href="/static/stylesheets/all-618a500561.min.css">
 {% endif %}
 
+  <style>
+    a:target {
+      background: lightgreen;
+      border: 1px dotted;
+      padding: 0.25em;
+    }
+  </style>
+
   {% if page.metaDescription %}
   <meta name="description" content="{{ page.metaDescription }}">
   {% else %}
