--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 {% endif %}
 
   <style>
-    div:target {
+    *:target {
       background: lightgreen;
       border: 1px dotted;
       padding: 0.25em;
