--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,9 @@
   {% endif %}
 
   <script>
+  {% if page.alternate %}
+    document.location = document.querySelector('link[rel="alternate"]').href
+  {% endif %}
     // Google Analytics placeholder
     window._gaq = window._gaq || [];
     window._gaq.push( ['_setSiteSpeedSampleRate', 75] );
